--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
 # SPDX-License-Identifier: BSD-2-Clause
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.8)
 project(hdl_graph_slam)
 
-# Can we use C++17 in indigo?
-if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
-  add_definitions(-std=c++11)
-  set(CMAKE_CXX_FLAGS "-std=c++11")
-else()
-  add_definitions(-std=c++14 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2)
-  set(CMAKE_CXX_FLAGS "-std=c++14 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2")
+set(CMAKE_CXX_FLAGS "-std=c++17 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2")
+set(CMAKE_BUILD_TYPE RELEASE)
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
@@ -16,41 +14,49 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
 # pcl 1.7 causes a segfault when it is built with debug mode
 set(CMAKE_BUILD_TYPE "RELEASE")
 
-find_package(catkin REQUIRED COMPONENTS
-  fast_gicp
-  geodesy
-  geometry_msgs
-  interactive_markers
-  message_generation
-  ndt_omp
-  nmea_msgs
-  pcl_ros
-  roscpp
-  rospy
-  sensor_msgs
-  std_msgs
-  tf_conversions
-)
-catkin_python_setup()
-
-find_package(PCL REQUIRED)
-include_directories(${PCL_INCLUDE_DIRS})
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
-
-message(STATUS "PCL_INCLUDE_DIRS:" ${PCL_INCLUDE_DIRS})
-message(STATUS "PCL_LIBRARY_DIRS:" ${PCL_LIBRARY_DIRS})
-message(STATUS "PCL_DEFINITIONS:" ${PCL_DEFINITIONS})
-
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_srvs REQUIRED)
+find_package(nmea_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_eigen REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(pcl_conversions REQUIRED)
+find_package(geodesy REQUIRED)
+find_package(ndt_omp REQUIRED)
+find_package(fast_gicp REQUIRED)
+find_package(PCL 1.12 REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 find_package(G2O REQUIRED)
-include_directories(SYSTEM ${G2O_INCLUDE_DIR} ${G2O_INCLUDE_DIRS})
-link_directories(${G2O_LIBRARY_DIRS})
+# include_directories(SYSTEM ${G2O_INCLUDE_DIR} ${G2O_INCLUDE_DIRS})
+# link_directories(${G2O_LIBRARY_DIRS})
 # link_libraries(${G2O_LIBRARIES})
+
+set(dependencies
+  rclcpp
+  std_srvs
+  nmea_msgs
+  nav_msgs
+  tf2_ros
+  tf2_eigen
+  tf2_geometry_msgs
+  visualization_msgs
+  pcl_ros
+  pcl_conversions
+  geodesy
+  ndt_omp
+  fast_gicp
+  PCL
+  G2O
+)
 
 find_package(OpenMP)
 if (OPENMP_FOUND)
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
 find_library(VGICP_CUDA_FOUND NAMES fast_vgicp_cuda)
@@ -59,76 +65,35 @@ if(VGICP_CUDA_FOUND)
   add_definitions(-DUSE_VGICP_CUDA)
 endif()
 
-########################
-## message generation ##
-########################
-add_message_files(FILES
-  FloorCoeffs.msg
-  ScanMatchingStatus.msg
+rosidl_generate_interfaces(${PROJECT_NAME}
+  msg/FloorCoeffs.msg
+  msg/ScanMatchingStatus.msg
+  srv/SaveMap.srv
+  srv/LoadGraph.srv
+  srv/DumpGraph.srv
+  DEPENDENCIES std_msgs geometry_msgs
 )
+rosidl_get_typesupport_target(cpp_typesupport_target ${PROJECT_NAME} rosidl_typesupport_cpp)
 
-add_service_files(FILES
-  SaveMap.srv
-  LoadGraph.srv
-  DumpGraph.srv
-)
-
-generate_messages(DEPENDENCIES std_msgs geometry_msgs)
-
-###################################
-## catkin specific configuration ##
-###################################
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES hdl_graph_slam_nodelet
-  CATKIN_DEPENDS
-    geometry_msgs
-    message_runtime
-    nmea_msgs
-    roscpp
-    sensor_msgs
-    std_msgs
-    tf_conversions
-#  DEPENDS system_lib
-)
-
-###########
-## Build ##
-###########
 include_directories(include)
-include_directories(
-  ${PCL_INCLUDE_DIRS}
-  ${catkin_INCLUDE_DIRS}
-)
 
 # nodelets
-add_library(prefiltering_nodelet apps/prefiltering_nodelet.cpp)
-target_link_libraries(prefiltering_nodelet
-  ${catkin_LIBRARIES}
-  ${PCL_LIBRARIES}
-)
+add_executable(prefiltering_nodelet apps/prefiltering_nodelet.cpp)
+ament_target_dependencies(prefiltering_nodelet ${dependencies})
+target_link_libraries(prefiltering_nodelet ${cpp_typesupport_target})
 
+add_executable(floor_detection_nodelet apps/floor_detection_nodelet.cpp)
+ament_target_dependencies(floor_detection_nodelet ${dependencies})
+target_link_libraries(floor_detection_nodelet ${cpp_typesupport_target})
 
-add_library(floor_detection_nodelet apps/floor_detection_nodelet.cpp)
-target_link_libraries(floor_detection_nodelet
-  ${catkin_LIBRARIES}
-  ${PCL_LIBRARIES}
-)
-add_dependencies(floor_detection_nodelet ${PROJECT_NAME}_gencpp)
-
-
-add_library(scan_matching_odometry_nodelet
+add_executable(scan_matching_odometry_nodelet
   apps/scan_matching_odometry_nodelet.cpp
   src/hdl_graph_slam/registrations.cpp
 )
-target_link_libraries(scan_matching_odometry_nodelet
-  ${catkin_LIBRARIES}
-  ${PCL_LIBRARIES}
-)
-add_dependencies(scan_matching_odometry_nodelet ${PROJECT_NAME}_gencpp)
+ament_target_dependencies(scan_matching_odometry_nodelet ${dependencies})
+target_link_libraries(scan_matching_odometry_nodelet ${cpp_typesupport_target})
 
-
-add_library(hdl_graph_slam_nodelet
+add_executable(hdl_graph_slam_nodelet
   apps/hdl_graph_slam_nodelet.cpp
   src/hdl_graph_slam/graph_slam.cpp
   src/hdl_graph_slam/keyframe.cpp
@@ -137,39 +102,33 @@ add_library(hdl_graph_slam_nodelet
   src/hdl_graph_slam/information_matrix_calculator.cpp
   src/g2o/robust_kernel_io.cpp
 )
-target_link_libraries(hdl_graph_slam_nodelet
-  ${catkin_LIBRARIES}
-  ${PCL_LIBRARIES}
-  ${G2O_TYPES_DATA}
-  ${G2O_CORE_LIBRARY}
-  ${G2O_STUFF_LIBRARY}
-  ${G2O_SOLVER_PCG}
-  ${G2O_SOLVER_CSPARSE}   # be aware of that CSPARSE is released under LGPL
-  ${G2O_SOLVER_CHOLMOD}   # be aware of that cholmod is released under GPL
-  ${G2O_TYPES_SLAM3D}
-  ${G2O_TYPES_SLAM3D_ADDONS}
-)
-add_dependencies(hdl_graph_slam_nodelet ${PROJECT_NAME}_gencpp)
+ament_target_dependencies(hdl_graph_slam_nodelet ${dependencies})
+target_link_libraries(hdl_graph_slam_nodelet ${cpp_typesupport_target})
 
-catkin_install_python(
-  PROGRAMS
-    src/${PROJECT_NAME}/bag_player.py
-    src/${PROJECT_NAME}/ford2bag.py
-    src/${PROJECT_NAME}/map2odom_publisher.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
-
-install(FILES nodelet_plugins.xml
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+# target_link_libraries(hdl_graph_slam_nodelet
+#   ${catkin_LIBRARIES}
+#   ${PCL_LIBRARIES}
+#   ${G2O_TYPES_DATA}
+#   ${G2O_CORE_LIBRARY}
+#   ${G2O_STUFF_LIBRARY}
+#   ${G2O_SOLVER_PCG}
+#   ${G2O_SOLVER_CSPARSE}   # be aware of that CSPARSE is released under LGPL
+#   ${G2O_SOLVER_CHOLMOD}   # be aware of that cholmod is released under GPL
+#   ${G2O_TYPES_SLAM3D}
+#   ${G2O_TYPES_SLAM3D_ADDONS}
+# )
+# add_dependencies(hdl_graph_slam_nodelet ${PROJECT_NAME}_gencpp)
 
 install(TARGETS
   prefiltering_nodelet
   floor_detection_nodelet
   scan_matching_odometry_nodelet
   hdl_graph_slam_nodelet
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
-
-install(DIRECTORY include/
-   DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
+  DESTINATION lib/${PROJECT_NAME}
 )
+
+install(
+  DIRECTORY launch rviz
+  DESTINATION share/${PROJECT_NAME}
+)
+
