--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>hdl_graph_slam</name>
   <version>0.0.0</version>
@@ -8,33 +9,35 @@
 
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>libg2o</build_depend>
-  <build_depend>message_generation</build_depend>
-  <depend>eigen</depend>
-  <depend>fast_gicp</depend>
-  <depend>geodesy</depend>
-  <depend>geometry_msgs</depend>
-  <depend>interactive_markers</depend>
-  <depend>ndt_omp</depend>
+  <depend>rclcpp</depend>
+  <depend>std_srvs</depend>
   <depend>nmea_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_eigen</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>pcl_ros</depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <depend>sensor_msgs</depend>
-  <depend>std_msgs</depend>
-  <depend>tf_conversions</depend>
-  <exec_depend>message_runtime</exec_depend>
-  <exec_depend>msf_updates</exec_depend>
-  <exec_depend>nodelet</exec_depend>
-  <exec_depend>tf</exec_depend>
+  <depend>pcl_conversions</depend>
+  <depend>ndt_omp</depend>
+  <depend>fast_gicp</depend>
+  <depend>PCL</depend>
 
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-progressbar</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-progressbar</exec_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <exec_depend>ros2launch</exec_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_cmake_clang_format</test_depend>
+  <test_depend>ament_cmake_cppcheck</test_depend>
+  <test_depend>ament_cmake_cpplint</test_depend>
+
+  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend> -->
+  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend> -->
+  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-progressbar</exec_depend> -->
+  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-progressbar</exec_depend> -->
 
   <export>
-    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
