--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,8 @@
   <depend>rclcpp_components</depend>
   <depend>std_srvs</depend>
   <depend>nmea_msgs</depend>
+  <depend>geodesy</depend>
+  <depend>libg2o</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_eigen</depend>
   <depend>tf2_geometry_msgs</depend>
